Added service methods and changed security configurations