@@ -1,8 +1,10 @@
 package com.event_registration.lk.controller;
 
 import com.event_registration.lk.dto.User;
+import com.event_registration.lk.service.UserService;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.Map;
 
 @RestController
@@ -10,9 +12,19 @@ import java.util.Map;
 @CrossOrigin
 public class UserController {
 
-    @GetMapping("/add")
+    UserService userService;
+
+    public UserController(UserService userService) {
+        this.userService = userService;
+    }
+
+    @PostMapping("/add")
     public Map<String,String> addUser(@RequestBody User user){
-        return Map.of("message","success");
+        Boolean result = userService.addUser(user);
+        if (result)
+            return Collections.singletonMap("signup status","successful");
+        else
+            return Collections.singletonMap("signup status","unsuccessful");
     }
 
     @GetMapping("/hello")
